fix colors in light and dark mode

--- a/src/components/Layout/DarkMode.scss
+++ b/src/components/Layout/DarkMode.scss
@@ -16,6 +16,13 @@ body.dark {
         background: linear-gradient(180deg, #200c39 0%, #220f3f 100%);
     }
 
+    .docsPagesContent {
+        .ant-tabs-tab-arrow-show,
+        .ant-tabs-content {
+            color: white;
+        }
+    }
+
     .post-page-wrapper {
         .site-footer {
             background-color: #220f3f;
